--- a/commerce_license_group.info.yml
+++ b/commerce_license_group.info.yml
@@ -1,8 +1,8 @@
 name: Commerce License Group
 type: module
 description: Provides a Commerce LicenseType plugin for group membership.
-core: 8.x
+core_version_requirement: ^8.8 || ^9
 package: 'Commerce (contrib)'
 dependencies:
-  - commerce_license
-  - group
+  - commerce_license:commerce_license
+  - group:group
